# xclipboard

./: CMakeLists.txt  lib.c  xclipboard.h
examples/: CMakeLists.txt  clipboard_change_notify.c  get_from_clipboard.c  push_to_clipboard.c
